plugins {
  id 'application'
  id 'jacoco'
  id 'idea'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '4.1.0'
  id 'com.github.ben-manes.versions' version '0.57.0'
  id 'org.sonarqube' version '7.3.1.8318'
  id 'org.owasp.dependencycheck' version '12.2.2'
  /*
    Applies analysis tools including checkstyle and OWASP Dependency checker.
    See https://github.com/hmcts/gradle-java-plugin
 */
  id 'uk.gov.hmcts.java' version '0.12.70'
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }
}

idea {
  module {
    testSources.from(project.sourceSets.integrationTest.java.srcDirs)
    testSources.from(project.sourceSets.functionalTest.java.srcDirs)
    testSources.from(project.sourceSets.smokeTest.java.srcDirs)
    testResources.from(project.sourceSets.integrationTest.resources.srcDirs)
    testResources.from(project.sourceSets.functionalTest.resources.srcDirs)
    testResources.from(project.sourceSets.smokeTest.resources.srcDirs)
  }
}

checkstyle {
  maxWarnings = 0
  toolVersion = '13.9.0'
}

configurations {
  functionalTestImplementation.extendsFrom testImplementation
  functionalTestRuntimeOnly.extendsFrom runtimeOnly

  integrationTestImplementation.extendsFrom testImplementation
  integrationTestRuntimeOnly.extendsFrom runtimeOnly
  cucumberRuntime.extendsFrom testImplementation

  smokeTestImplementation.extendsFrom testImplementation
  smokeTestRuntimeOnly.extendsFrom runtimeOnly
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

// https://github.com/gradle/gradle/issues/16791
tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

tasks.withType(Test) {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

test {
  failFast = true
}

tasks.register("functional", Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
}

tasks.register("integration", Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

tasks.register("fortifyScan", JavaExec) {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

tasks.register("smoke", Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

project.tasks['jacocoTestReport'].dependsOn test, integration

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required = true
    csv.required = false
    html.required = true
    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport
project.tasks['check'].dependsOn integration

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: disposer-fee-and-pay"
    property "sonar.projectKey", "uk.gov.hmcts.reform:disposer-fee-and-pay"
    property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    property "sonar.coverage.exclusions", "**/disposer/Application.java"
    property "sonar.sources", "src/main/java"
    property "sonar.tests", "src/test/java,src/smokeTest/java,src/functionalTest/java,src/integrationTest/java"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}

def versions = [
  cucumber      : '7.34.6',
  fortify       : '1.4.10',
  log4J         : '2.26.1',
  logback       : '1.6.1',
  lombok        : '1.18.46',
  restAssured   : '6.0.1',
  serviceAuthClient: '6.0.1',
  wiremock      : '3.13.2'
]

configurations.configureEach {
  resolutionStrategy {
    eachDependency { DependencyResolveDetails dep ->
      if (dep.requested.name == 'commons-fileupload') {
        // CVE-2025-48976
        dep.useVersion '1.6.0'
      }
    }
  }
}

dependencies {
  implementation "ch.qos.logback:logback-classic:${versions.logback}"
  implementation "ch.qos.logback:logback-core:${versions.logback}"
  implementation "com.github.hmcts:service-auth-provider-java-client:${versions.serviceAuthClient}"
  implementation "com.github.hmcts.java-logging:logging:8.0.0"
  implementation "jakarta.servlet:jakarta.servlet-api"
  implementation "org.apache.logging.log4j:log4j-api:${versions.log4J}"
  implementation "org.apache.logging.log4j:log4j-to-slf4j:${versions.log4J}"
  implementation "org.springframework.boot:spring-boot-starter-json"

  testImplementation "org.springframework.boot:spring-boot-starter-test"
  testImplementation "com.github.hmcts:fortify-client:${versions.fortify}:all"
  testRuntimeOnly "org.junit.platform:junit-platform-launcher"

  compileOnly "org.projectlombok:lombok:${versions.lombok}"
  annotationProcessor "org.projectlombok:lombok:${versions.lombok}"
  testCompileOnly "org.projectlombok:lombok:${versions.lombok}"
  testAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"
  integrationTestCompileOnly "org.projectlombok:lombok:${versions.lombok}"
  integrationTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"
  functionalTestCompileOnly "org.projectlombok:lombok:${versions.lombok}"
  functionalTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

  integrationTestImplementation "org.junit.platform:junit-platform-suite-api"
  integrationTestImplementation "org.junit.platform:junit-platform-suite-engine"
  integrationTestImplementation "org.springframework:spring-web"
  integrationTestImplementation "org.wiremock:wiremock-standalone:${versions.wiremock}"
  integrationTestImplementation "io.cucumber:cucumber-java:${versions.cucumber}"
  integrationTestImplementation "io.cucumber:cucumber-spring:${versions.cucumber}"
  integrationTestImplementation "io.cucumber:cucumber-junit-platform-engine:${versions.cucumber}"

  smokeTestImplementation "io.rest-assured:rest-assured:${versions.restAssured}"
}

application {
  mainClass = 'uk.gov.hmcts.reform.disposer.Application'
}

bootJar {
  archiveFileName = "disposer-fee-and-pay.jar"

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processIntegrationTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processFunctionalTestResources") {
  duplicatesStrategy = 'include'
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
